question service Data service