@@ -1,11 +1,12 @@
 package com.eremin.textquestservlets.servlet;
 
 import java.io.*;
+import java.util.List;
 
-import com.eremin.textquestservlets.model.Root;
+import com.eremin.textquestservlets.model.Question;
+import com.eremin.textquestservlets.service.DataService;
 import com.eremin.textquestservlets.service.QuestionService;
 import jakarta.servlet.ServletConfig;
-import jakarta.servlet.ServletContext;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.*;
 import jakarta.servlet.annotation.*;
@@ -16,28 +17,27 @@ import static com.eremin.textquestservlets.consts.Const.*;
 @WebServlet(name = "questionServlet", value = "/question")
 public class QuestionServlet extends HttpServlet {
     private QuestionService questionService;
+    private DataService dataService;
 
     @Override
     public void init(ServletConfig config) throws ServletException {
         super.init(config);
-        ServletContext servletContext = config.getServletContext();
-        questionService = ((QuestionService) servletContext.getAttribute(QUESTION_SERVICE));
+        this.questionService = (QuestionService) config.getServletContext().getAttribute(QUESTION_SERVICE);
+        this.dataService = (DataService) config.getServletContext().getAttribute(DATA_SERVICE);
     }
 
     @Override
-    public void doGet(HttpServletRequest request, HttpServletResponse response) {
+    protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 
-        Root data = questionService.getData();
+        List<Question> questions = dataService.getData().getQuestions();
 
-        if (request.getAttribute("question") == null) {
-            request.setAttribute("question", data.getQuestions().getFirst().getQuestion());
-            request.setAttribute("answer_1", data.getQuestions().getFirst().getAnswers().get(0));
-            request.setAttribute("answer_2", data.getQuestions().getFirst().getAnswers().get(1));
-            try {
-                request.getRequestDispatcher("/question.jsp").forward(request, response);
-            } catch (ServletException | IOException e) {
-                throw new RuntimeException(e);
-            }
+        if (req.getAttribute("question") == null) {
+            req.setAttribute("question", questions.getFirst().getQuestion());
+            req.setAttribute("answer_1", questions.getFirst().getAnswers().get(0));
+            req.setAttribute("answer_2", questions.getFirst().getAnswers().get(1));
+
+            req.getRequestDispatcher("/question.jsp").forward(req, resp);
+
         }
     }
 }
